==> continualmi/emwaver/Core/Src/cc1101.c <==
#include "cc1101.h"
#include "main.h"
#define   WRITE_BURST       0x40            //write burst
#define   READ_SINGLE       0x80            //read single
#define   READ_BURST        0xC0            //read burst
#define   uint8_tS_IN_RXFIFO   0x7F            //uint8_t number in RXfifo
#define   max_modul 6

void SpiWriteReg (uint8_t address, uint8_t value) {
	HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_RESET);  // pull the cs pin low
	HAL_SPI_Transmit (&hspi1, &address, 1, 100);  // write data to register
	HAL_SPI_Transmit (&hspi1, &value, 1, 100);  // write data to register
	HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_SET);  // pull the cs pin high
}

void SpiWriteBurstReg(uint8_t addr, uint8_t *buffer, uint8_t num){
	uint8_t i, temp;
	temp = addr | WRITE_BURST;
	HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_RESET);  // pull the cs pin low
	HAL_SPI_Transmit (&hspi1, &temp, 1, 100);
	for (i = 0; i < num; i++){
	 HAL_SPI_Transmit (&hspi1, &buffer[i], 1, 100);
	}
	HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_SET);
}

void SpiStrobe (uint8_t value) {
	HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_RESET);  // pull the cs pin low
	HAL_SPI_Transmit (&hspi1, &value, 1, 100);
	HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_SET);  // pull the cs pin low

}

void Init(void)
{
  setSpi();
  SpiStart();                   //spi initialization
  HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_SET);
  //digitalWrite(SCK_PIN, HIGH);
  //digitalWrite(MOSI_PIN, LOW);
  Reset();                    //CC1101 reset
  RegConfigSettings();            //CC1101 register config
  SpiEnd();
}

uint8_t SpiReadStatus(uint8_t addr)
{
  uint8_t value,temp;
  SpiStart();
  temp = addr | READ_BURST;
  HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_RESET);
  //while(digitalRead(MISO_PIN));
  HAL_SPI_Transmit (&hspi1, &temp, 1, 100);
  HAL_SPI_Receive (&hspi1, &value, 1, 100);
  HAL_GPIO_WritePin (GPIOA, NSS_Pin, GPIO_PIN_SET);
  SpiEnd();
  return value;
}

uint8_t map(float value, float fromLow, float fromHigh, float toLow, float toHigh) {
  // Make sure the value is within the fromLow-fromHigh range
  value = (value < fromLow) ? fromLow : value;
  value = (value > fromHigh) ? fromHigh : value;

  // Map the value to the toLow-toHigh range
  uint8_t mapped = (uint8_t) ((value - fromLow) * (toHigh - toLow) / (fromHigh - fromLow) + toLow);

  return mapped;
}
