==> nrfhome/nrfhome/avc/src/cc1101.c <==
#include <zephyr/device.h>
#include <zephyr/kernel.h>
#include <zephyr/drivers/gpio.h>
#include <zephyr/drivers/spi.h>
#include <zephyr/logging/log.h>
#include <stdint.h>
#include "cc1101.h"
#define   WRITE_BURST       0x40            //write burst
#define   READ_SINGLE       0x80            //read single
#define   READ_BURST        0xC0            //read burst
#define   BYTES_IN_RXFIFO   0x7F            //byte number in RXfifo
#define SPI_DEV_NODE		DT_NODELABEL(spi0)
#define SPI_CS_NODE		DT_NODELABEL(spi_cs)

static void SpiWriteReg(byte addr, byte value)
{
	byte rx_bytes[2] = {0xaa, 0xaa};
	byte tx_bytes[2] = {addr, value};
	struct spi_buf rx_buf = { rx_bytes, 2 };
	struct spi_buf tx_buf = { tx_bytes, 2 };
	struct spi_buf_set rx_buf_set = {&rx_buf, 1};
	struct spi_buf_set tx_buf_set = {&tx_buf, 1};

	int rc = spi_transceive(spi_dev, &spi_cfg, &tx_buf_set, &rx_buf_set);
	__ASSERT(rc == 0, "transceive failed");

	LOG_DBG("SPI> %02x %02x", tx_bytes[0], tx_bytes[1]);
}

static void SpiWriteBurstReg(byte addr, byte *buffer, byte num)
{
	byte tx_bytes[1] = {addr | WRITE_BURST};
	struct spi_buf tx_buf[2];
	struct spi_buf_set tx_buf_set = {tx_buf, 2};

	tx_buf[0].buf = tx_bytes;
	tx_buf[0].len = 1;
	tx_buf[1].buf = buffer;
	tx_buf[1].len = num;

	int rc = spi_transceive(spi_dev, &spi_cfg, &tx_buf_set, NULL);
	__ASSERT(rc == 0, "transceive failed");

	LOG_DBG("SPI> %02x ...", addr);
}

static byte SpiReadStatus(byte addr)
{
	byte rx_bytes[2] = {0xaa, 0xaa};
	byte tx_bytes[2] = {addr | READ_BURST, 0};
	struct spi_buf rx_buf = { rx_bytes, 2 };
	struct spi_buf tx_buf = { tx_bytes, 2 };
	struct spi_buf_set rx_buf_set = {&rx_buf, 1};
	struct spi_buf_set tx_buf_set = {&tx_buf, 1};

	int rc = spi_transceive(spi_dev, &spi_cfg, &tx_buf_set, &rx_buf_set);
	__ASSERT(rc == 0, "transceive failed");

	LOG_DBG("SPI> %02x", tx_bytes[0]);
	LOG_DBG("SPI< %02x %02x", rx_bytes[0], rx_bytes[1]);
	return rx_bytes[1];
}

static void SpiStrobe(byte cmd)
{
	byte rx_bytes[1] = {0xaa};
	byte tx_bytes[1] = {cmd};
	struct spi_buf rx_buf = { rx_bytes, 1 };
	struct spi_buf tx_buf = { tx_bytes, 1 };
	struct spi_buf_set rx_buf_set = {&rx_buf, 1};
	struct spi_buf_set tx_buf_set = {&tx_buf, 1};

	int rc = spi_transceive(spi_dev, &spi_cfg, &tx_buf_set, &rx_buf_set);
	__ASSERT(rc == 0, "transceive failed");

	LOG_DBG("SPI> %02x", tx_bytes[0]);
}

static long map(long x, long in_min, long in_max, long out_min, long out_max) {
  return (x - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
}

void cc1101_init(void)
{
#if DT_NODE_EXISTS(SPI_CS_NODE) && DT_NODE_EXISTS(SPI_DEV_NODE)
	static const struct spi_cs_control spi_dev_cs_ctrl = {
		.gpio = GPIO_DT_SPEC_GET(SPI_CS_NODE, gpios),
		.delay = 1,
	};
	spi_cfg.cs = &spi_dev_cs_ctrl;

	spi_dev = DEVICE_DT_GET(SPI_DEV_NODE);
	__ASSERT(device_is_ready(spi_dev), "SPI master unavailable");

	gpio_pin_configure_dt(&spi_dev_cs_ctrl.gpio, GPIO_OUTPUT_INACTIVE);

	// Reset
	gpio_pin_set_dt(&spi_dev_cs_ctrl.gpio, 0);
	k_sleep(K_MSEC(1));
	gpio_pin_set_dt(&spi_dev_cs_ctrl.gpio, 1);
	k_sleep(K_MSEC(1));
	gpio_pin_set_dt(&spi_dev_cs_ctrl.gpio, 0);
	k_sleep(K_MSEC(1));
	gpio_pin_set_dt(&spi_dev_cs_ctrl.gpio, 1);
	k_sleep(K_MSEC(1));

	SpiStrobe(CC1101_SRES);
	k_sleep(K_MSEC(10));

	RegConfigSettings();
#endif
}
